# VOSK

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  darksynth_synth_design_lock.md
.github/: RELEASE_NOTES.md
.github/workflows/: release.yml
Source/: Character.h  DspHelpers.h  Filters.h  FxChain.h  GuiComponents.h  ModMatrix.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.h  Presets.h  Scope.h  Tape.h  VoskLookAndFeel.h  VoskSound.h  VoskVoice.cpp  VoskVoice.h
installer/: README.md  VOSK.iss  install-local.ps1
